--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
             <ul>
                 <li><a href="https://eportfolio.mygreatlearning.com/rajesh-kumar-a">DS Project</a></li>
             </ul>
-        </section>
+        </section>git commit -m "Add initial portfolio website files"
+
         <section id="contact">
             <h2>Contact</h2>
-            <p>Email me at <a href="mailto:rajeshkumaratuk@gmail.com">rajeshkumaratuk@example.com</a>.</p>
+            <p>Email me at <a href="mailto:rajeshkumaratuk@gmail.com">rajeshkumaratuk@gmail.com</a>.</p>
         </section>
     </main>
     <footer>
